Git 1.1.x
------------------------------------------------------------------------------------------------------------------------

CONFIGS
	Added: Sysctl configuration file for secondary IP promoting ( /etc/sysctl.d/imscp.conf file )
	Changed: SPF - Email treating level is now set to softfail instead of fail ( bind9 )
	Fixed: Access to error documents is forbiden in some contexts ( Apache )
	Fixed: Domain aliases and subdomains can't follow sylinks from customer homedir

BACKEND
	Fixed: Fcgi wrapper is not created in some contexts ( apache_fcgid )
	Fixed: Pool configuration file is not created in some contexts ( apache_php_fpm )
	Fixed: Network manager must not remove SSH connection IP

GUI
	Added: Events for mail catch-all
	Changed: All network interfaces are now selectable, even if they are not up
	Fixed: Clear opcode cache when needed ( Opcache, APC )
	Fixed: CSS loading order
	Replaced: i-MSCP jQuery tooltip plugin by jQuery UI tooltip widget

i18n
	Added: i18n_getJsTranslations() function which allow to translate JS scripts
	Added: onGetJsTranslations event allows the plugins to add their own JS translations
	Added: New languages: Breton, Czech, Icelandic and Georgian (Requested languages)
	Fixed: Don't throw any exception when a locale is not valid. Fallback to the default locale instead

PLUGINS
	Fixed: PHP Notice: Undefined index: prirotiy in /var/www/imscp/gui/library/iMSCP/Plugin/Manager.php on line 1390
	Fixed: Plugins's configuration is not updated using the latest conffiles state when an OPCODE cache is enabled

VENDOR
	Added: pGenerator jQuery plugin v1.0.0

TICKETS
	Fixed #1187: Enhancement - Password generator for any password field
	Fixed #1188: Bug - apache_fcgid - Fcgid wrapper not created in some contexts
	Fixed #1191: Bug - Domains which belong to disabled accounts are no longer reachable after an i-MSCP reconfiguration
	Fixed #1192: Bug - Network manager - Server connection lost