@@ -108,9 +108,9 @@ Group                      nogroup
 {SSL}  TLSEngine                on
 {SSL}  TLSRequired              off
 {SSL}  TLSLog                   /var/log/proftpd/ftp_ssl.log
-{SSL}  TLSProtocol              TLSv1
-{SSL}  TLSCipherSuite           HIGH:MEDIUM:+TLSv1:!SSLv2:!SSLv3
-{SSL}  TLSOptions               NoCertRequest NoSessionReuseRequired
+{SSL}  TLSProtocol              TLSv1 TLSv1.1 TLSv1.2
+{SSL}  TLSCipherSuite           ALL:!aNULL:!ADH:!eNULL:!LOW:!EXP:RC4+RSA:+HIGH:+MEDIUM
+{SSL}  TLSOptions               {TLSOPTIONS}
 {SSL}  TLSRSACertificateFile    {CONF_DIR}/{CERTIFICATE}.pem
 {SSL}  TLSRSACertificateKeyFile {CONF_DIR}/{CERTIFICATE}.pem
 {SSL}  TLSVerifyClient          off
